# tetris

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  build.cmd  cmake_install.cmake  game.cpp
include/gamecore/: Application.hpp  Color.hpp  EventBus.hpp  Game.hpp  GameRegistry.hpp  GameShell.hpp  Geometry.hpp  Input.hpp  Renderer2D.hpp
include/games/arkanoid/: ArkanoidGame.hpp  ArkanoidGameFactory.hpp
include/games/battle_city/: BattleCityGame.hpp  BattleCityGameFactory.hpp
include/games/galaga/: GalagaGame.hpp  GalagaGameFactory.hpp
include/games/pacman/: PacmanGame.hpp  PacmanGameFactory.hpp
include/games/tetris/: Board.hpp  ITetrominoProvider.hpp  ScoringStrategy.hpp  SevenBagTetrominoProvider.hpp  TetrisGame.hpp  TetrisGameFactory.hpp  Tetromino.hpp
include/platform/sdl2/: BitmapFont.hpp  Sdl2InputSource.hpp  Sdl2Renderer2D.hpp  Sdl2Window.hpp
scripts/: build.ps1
src/: App.cpp  App.h  Game.cpp  Game.h  Renderer.cpp  Renderer.h  Tetromino.cpp  Tetromino.h  main.cpp
src/core/: Application.cpp  EventBus.cpp  GameRegistry.cpp  GameShell.cpp
src/games/arkanoid/: ArkanoidGame.cpp  ArkanoidGameFactory.cpp
src/games/battle_city/: BattleCityGame.cpp  BattleCityGameFactory.cpp
src/games/galaga/: GalagaGame.cpp  GalagaGameFactory.cpp
src/games/pacman/: PacmanGame.cpp  PacmanGameFactory.cpp
src/games/tetris/: Board.cpp  ClassicScoringStrategy.cpp  SevenBagTetrominoProvider.cpp  TetrisGame.cpp  TetrisGameFactory.cpp  Tetromino.cpp
src/platform/sdl2/: BitmapFont.cpp  Sdl2InputSource.cpp  Sdl2Renderer2D.cpp  Sdl2Window.cpp
